--- a/inicio.html
+++ b/inicio.html
@@ -18,7 +18,34 @@
                 <a href="f1.html">F1</a>
             </div>
         </div>
-   
     </header>
+
+    <div class="container">
+  
+        <ul class="slider">
+          <li id="slide1">
+            <img src="img/mercedesyferrari.jpg"/>
+          </li>
+          <li id="slide2">
+            <img src="img/pista.jpg"/>
+          </li>
+          <li id="slide3">
+            <img src="img/Rb.jpg"></a>
+          </li>
+        </ul>
+        
+        <ul class="menu">
+          <li>
+            <a href="#slide1">1</a>
+          </li>
+          <li>
+            <a href="#slide2">2</a>
+          </li>
+           <li>
+            <a href="#slide3">3</a>
+          </li>
+        </ul>
+        
+      </div>
 </body>
 </html>
