--- a/inicio.html
+++ b/inicio.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="inicio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+      <div class="logo">
+      <a href="inicio.html"><img src="img/pngwing.com.png" alt="logo de la pagina"></a>
+      </div>
         <div class="encabezado">
-            <h1 class="logo">LOGO</h1>
             <div class="enlaces">
                 <a href="inicio.html">INICIO</a>
                 <a href="creadores.html">CREADORES</a>
@@ -19,33 +24,5 @@
             </div>
         </div>
     </header>
-
-    <div class="container">
-  
-        <ul class="slider">
-          <li id="slide1">
-            <img src="img/mercedesyferrari.jpg"/>
-          </li>
-          <li id="slide2">
-            <img src="img/pista.jpg"/>
-          </li>
-          <li id="slide3">
-            <img src="img/Rb.jpg"></a>
-          </li>
-        </ul>
-        
-        <ul class="menu">
-          <li>
-            <a href="#slide1">1</a>
-          </li>
-          <li>
-            <a href="#slide2">2</a>
-          </li>
-           <li>
-            <a href="#slide3">3</a>
-          </li>
-        </ul>
-        
-      </div>
 </body>
 </html>
