--- a/galeria.html
+++ b/galeria.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="galeria.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Galeria</title>
+    <link rel="icon" href="img/pngwing.com.png" type="img/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
@@ -16,17 +17,17 @@
             </div>
         <div class="encabezado">
             <div class="enlaces">
-                <a href="inicio.html">INICIO</a>
-                <a href="creadores.html">CREADORES</a>
-                <a href="galeria.html">GALERIA</a>
-                <a href="contactos.html">CONTACTO</a>
-                <a href="f1.html">F1</a>
+              <a href="inicio.html">INICIO</a>
+              <a href="f1.html">F1</a>
+              <a href="creadores.html">CREADORES</a>
+              <a href="galeria.html">GALERIA</a>
+              <a href="contactos.html">CONTACTO</a>
             </div>
         </div>
    
     </header>
 
-    <div class="container">
+    <div class="contenido">
   
         <ul class="slider">
           <li id="slide1">
