--- a/creadores.html
+++ b/creadores.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="creadores.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Creadores</title>
+    <link rel="icon" href="img/pngwing.com.png" type="img/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
@@ -17,10 +18,10 @@
         <div class="encabezado">
             <div class="enlaces">
                 <a href="inicio.html">INICIO</a>
+                <a href="f1.html">F1</a>
                 <a href="creadores.html">CREADORES</a>
                 <a href="galeria.html">GALERIA</a>
                 <a href="contactos.html">CONTACTO</a>
-                <a href="f1.html">F1</a>
             </div>
         </div>
    
