--- a/f1.html
+++ b/f1.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="f1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>F1</title>
+    <link rel="icon" href="img/pngwing.com.png" type="img/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
@@ -17,13 +18,16 @@
         <div class="encabezado">
             <div class="enlaces">
                 <a href="inicio.html">INICIO</a>
+                <a href="f1.html">F1</a>
                 <a href="creadores.html">CREADORES</a>
                 <a href="galeria.html">GALERIA</a>
                 <a href="contactos.html">CONTACTO</a>
-                <a href="f1.html">F1</a>
             </div>
         </div>
-   
     </header>
+
+    <div class="contenido">
+
+    </div>
 </body>
 </html>
