--- a/inicio.html
+++ b/inicio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/213faa904b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="inicio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Inicio</title>
@@ -25,5 +26,24 @@
             </div>
         </div>
     </header>
+
+    <div class="contenido-footer">
+        <footer>
+            <div class="logo-footer">
+                <img src="" alt="">
+            </div>
+            <div class="redes-footer">
+                <a href="#"><i class="fa-brands fa-instagram iconos"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok iconos"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube iconos"></i></a>
+            </div>
+
+            <hr>
+            <h4>© 2024 UNIVERSIDAD DON BOSCO - Todos los derechos reservados</h4>
+
+        </footer>
+    </div>
+
+    
 </body>
 </html>
