--- a/inicio.html
+++ b/inicio.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img class="imgfondo" src="img/rb19.jpg">
     <header>
       <div class="logo">
       <a href="inicio.html"><img src="img/pngwing.com.png" alt="logo de la pagina"></a>
@@ -26,6 +27,14 @@
             </div>
         </div>
     </header>
+    
+
+    <div class="contenidocuerpo">
+        <h1>TEMPORADA F1 2021</h1>
+        <h3>La temporada 2021 de Fórmula 1 <br>
+            fue la 72.ª temporada del Campeonato Mundial de Fórmula 1 de la historia,<br>
+             organizada por la Federación Internacional del Automóvil (FIA).</h3>
+    </div>
 
     <div class="contenido-footer">
         <footer>
