--- a/f1.html
+++ b/f1.html
@@ -28,6 +28,18 @@
 
     <div class="contenido">
 
+         <h1> ¿Quién salió campeón de la Fórmula 1 en el 2021? </h1>
+        <p> Con el auto de seguridad en pista, Red Bull llamó a Verstappen a los boxes para cambiarle gomas. Con caucho fresco, 
+            cuando quedó detrás de Hamilton tuvo mejor adherencia que el inglés y tras el relanzamiento lo superó, ganó la carrera y su primer campeonato en la Máxima.        </p>
+
+            <h1> Estrategias de la formula 1 </h1>
+
+            <h2> Gestión de neumáticos: El arte de la durabilidad </h2>
+            <h2> Aerodinámica: Viento a tu favor </h2>
+            <h2> Paradas en boxes: La velocidad en la perfección </h2>
+            <h2> Estrategias de combustible: Eficiencia sobre velocidad. </h2>
+            <h2> La importancia de la clasificación. </h2>
+
     </div>
 </body>
 </html>
